<?xml version="1.0"?>
<package format="2">
  <name>auxiliary</name>
  <version>1.0.0</version>
  <description>Python helper modules for Remote Assaying Machine</description>

  <maintainer email="harshit.sankhla@rupeek.com">Harshit Kumar Sankhla</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>

</package>